--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -52,4 +51,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
+  
 }
