--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,17 @@
 [build]
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
-  
+  base = "/"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
 
 [[headers]]
   for = "/*"
