--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.11.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-particles": "^2.12.2",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.x",
     "react-scripts": "5.0.1",
     "three": "^0.169.0",
     "tsparticles": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "vite",
+    "start": "react-scripts start",
     "build": "vite build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "eslintConfig": {
@@ -49,7 +52,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "@vitejs/plugin-react": "^4.x",
+    "vite": "^5.x"
   }
   
 }
