feat(cart): enhance checkout experience
- Redesign Stripe secure checkout section
- Add official Stripe branding and logo
- Improve cart UI with better visual hierarchy
- Add security badges and encryption indicators
- Update shipping information display
- Enhance overall cart styling and animations

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,11 @@
 [build]
-  command = "npm install && npm run build"
-  publish = "dist"
-  base = "/"
+  command = "CI= npm run build"
+  publish = "build"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
 
 [build.environment]
   NODE_VERSION = "18"
