--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.11.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.x.x",
+    "react-dom": "^18.x.x",
+    "react-helmet-async": "^2.0.5",
     "react-particles": "^2.12.2",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.x.x",
     "react-scripts": "5.0.1",
     "three": "^0.169.0",
     "tsparticles": "^3.5.0",
@@ -52,5 +53,4 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
-  
 }
