--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,9 @@
   for = "/*"
     [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/sitemap.xml"
+  [headers.values]
+    Content-Type = "application/xml"
+    Access-Control-Allow-Origin = "*"
