--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.x.x",
     "react-dom": "^18.x.x",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.x.x",
     "react-scripts": "5.0.1",
